--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "emailjs": "^4.0.0",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "moment": "^2.29.3",
     "react": "^18.1.0",
