--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:47821/",
   "eslintConfig": {
     "extends": [
       "react-app",
